2005-05-01  Mathieu Peltier <mathieu.peltier@gmail.com>
	* Bug fix in cvsweb cgi - "General options" panel was not working
	
2005-03-25  Tim Perdue <tim@gforge.org>

	* Bug fix in Group::removeUser - could fail in some cases
	* tracker - the group_id and tracker_id are optional now
	* SOAP - add support for the new EXTRA FIELDS

2004-04-29	Marcelo Mottalli <marcelo@gforgegroup.com>
	
	* Bug fixes in tracker / mass update:
		- when having a custom field of type "status", there was no 
		"No change" option forcing the user to update the status of all 
		the artifacts.
		- when having a custom field of type "checkbox" or "multiselect" and 
		not selecting any value, the field doesn't get updated.

2005-04-28	Marcelo Mottalli <marcelo@gforgegroup.com>

	* Bug fix: FRS / File deletion displayed an error when trying to delete a file
	and not checking the "I'm sure" checkbox.
	* Bug fix: When reading a news item, the site news were displayed on the
	right panel instead of the project news.

2005-04-27  Christian Bayle <bayle@debian.org>

	* Applied [#1216] httpd.config tweaks and some HTML validation errors
	* Added sys_simple_dns in setup script
	* Applied an equivalent of [#1219] Small fix to setup -- don't process
	backup files

2005-04-27  Marcelo Mottalli <marcelo@gforgegroup.com>

	* Added code for including custom fields in the mail notification for the
	tracker.

2005-04-26  Christian Bayle <bayle@debian.org>
	
	* Added sys_apache_user and sys_apache_group in local.inc
	* Fixed a typo in 20050127-frs-reorg.php (GLOBAL instead of GLOBALS)
	* Added a delete on project_sums_agg to turnaround upgrade bug 
	on 20050224.sql. Closes bug [#1197] 

2005-04-26  Mathieu Peltier  <mathieu.peltier@gmail.com>
	
	* Applied [#1196] www/account/register.php xhtml 1.0 compliant
	patch by Vicente J. Ruiz Jurado
	
2005-04-19  Mathieu Peltier  <mathieu.peltier@gmail.com>
	
	* Integrated ViewCVS PHP wrapper inspired from CVSweb and CodeX'
	ones into scmsvn plugin (task [#550])