@@ -426,7 +426,7 @@ class ArtifactType extends Error {
 	 * @return string return email address
 	 */
 	function getReturnEmailAddress() {
-		global $sys_default_domain;
+		global $sys_default_domain,$sys_use_gateways;
 		$address = '';
 		if($sys_use_gateways) {
 			$address .= strtolower($this->getUnixName());
